// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-9liv1b"
  >
     
    <span>
      Default
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Large Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="iconOnly large svelte-9liv1b"
  >
    <i
      class="material-icons svelte-9liv1b"
    >
      play_arrow
    </i>
     
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Large Text And Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="large svelte-9liv1b"
  >
    <i
      class="material-icons svelte-9liv1b"
    >
      person
    </i>
     
    <span>
      Hey!
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="primary svelte-9liv1b"
  >
     
    <span>
      Primary
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="primary iconOnly svelte-9liv1b"
  >
    <i
      class="material-icons svelte-9liv1b"
    >
      volume_up
    </i>
     
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary With Badge 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="primary svelte-9liv1b"
  >
    <i
      class="material-icons svelte-9liv1b"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
     
     
    <div
      class="badge svelte-9liv1b halo"
    >
      5
    </div>
  </button>
</section>
`;

exports[`Storyshots Components/Button Text And Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-9liv1b"
  >
    <i
      class="material-icons svelte-9liv1b"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button With Badge 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-9liv1b"
  >
    <i
      class="material-icons svelte-9liv1b"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
     
     
    <div
      class="badge svelte-9liv1b halo"
    >
      23
    </div>
  </button>
</section>
`;

exports[`Storyshots Components/Button With Badge Limit 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-9liv1b"
  >
    <i
      class="material-icons svelte-9liv1b"
    >
      warning
    </i>
     
    <span>
      Just too much
    </span>
     
     
    <div
      class="badge svelte-9liv1b halo"
    >
      999+
    </div>
  </button>
</section>
`;
